# valence

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindCUDA.cmake  FindMetal.cmake
docs/api/: index.md
docs/design/: architecture.md
examples/: CMakeLists.txt  basic_simulation.cpp  multi_qubit_gates.cpp
include/utils/: Logger.hpp  ThreadPool.hpp
include/valence/: StateVector.hpp  ValenceCircuit.hpp  ValenceGate.hpp  ValenceSimulator.hpp  ValenceState.hpp
python/: README.md  setup.py
python/bindings/: pybind_module.cpp
scripts/: build.sh  lint.sh  run_sim.sh  test.sh
src/: main.cpp
src/backends/: CPUBackend.cpp  CPUBackend.hpp  CUDABackend.cu  CUDABackend.hpp  MetalBackend.hpp  MetalBackend.mm
src/core/: StateVector.cpp  ValenceCircuit.cpp  ValenceGate.cpp  ValenceSimulator.cpp  ValenceState.cpp
src/ops/: CustomGates.cpp  GateFactory.cpp  StandardGates.cpp
src/utils/: Logger.cpp  ThreadPool.cpp
tests/: CMakeLists.txt
tests/integration/: test_SimpleCircuit.cpp
tests/performance/: benchmark_fourier_transform.cpp  benchmark_large_circuit.cpp
tests/unit/: test_ValenceGate.cpp  test_ValenceState.cpp
